# RPA

./: .dockerignore  run_continuous_learning.py  worklog.md
RPA/RPA/: DOCKER_QUICKSTART.md  deploy.sh  docker-compose.yml  pyproject.toml  stop.sh  test_datasets.py  train.py  update.sh
RPA/RPA/.github/workflows/: exam-assessment.yml
RPA/RPA/autonomous/: learn_skills_first.py  learning_engine.py  run_autonomous.py
RPA/RPA/curriculum/coding/: batch_2_python_patterns.json  batch_3_code_snippets.json
RPA/RPA/curriculum/english/: batch_2_words_enhanced.json
RPA/RPA/curriculum/health/: nutrition_basics.json
RPA/RPA/curriculum/skills/: coding_agent_curriculum.json  docx_curriculum.json  finance_curriculum.json  image_generation_curriculum.json  pdf_curriculum.json  pptx_curriculum.json  skill_vetter_curriculum.json  storyboard_manager_curriculum.json  tts_curriculum.json  ui_ux_pro_max_curriculum.json  video generation_curriculum.json  visual_design_foundations_curriculum.json
RPA/RPA/curriculum/tracks/: health.json  medicine.json
RPA/RPA/memory_storage/: graph.json  metadata.json
RPA/RPA/rpa/agents/: __init__.py  language_agent.py  shared_knowledge.py
RPA/RPA/rpa/api/: __init__.py
RPA/RPA/rpa/assessment/: __init__.py  criteria.py  curriculum_registry.py  exercise_generator.py
RPA/RPA/rpa/cli/: __init__.py
RPA/RPA/rpa/closed_loop/: memory_evolution.py  (+2 more)
RPA/RPA/tests/: __init__.py  test_assessment.py  test_english_domain.py  test_learning.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7_intelligence.py  test_self_improvement.py
(+300 files in other folders)
